# dark-binding

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  clippy.toml  lcu.der  rustfmt.toml
dependencies/native-tls/src/: lib.rs
dependencies/websocket/: Cargo.toml
dependencies/websocket/src/client/: builder.rs
dependencies/websocket/tokio-tls/: Cargo.toml
src/: errors.rs  main.rs  util.rs
src/league_client/: client.rs  example_groups.toml  mod.rs  structs.rs  util.rs  websocket.rs
